--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "pg": "^6.2.4",
+    "pg-hstore": "^2.3.2",
     "sequelize": "^4.1.0",
     "sqlite": "^2.8.0",
     "underscore": "^1.8.3"
