--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.1.0",
     "sqlite": "^2.8.0",
-    "underscore": "^1.8.3"
-  },
-  "devDependencies": {
+    "underscore": "^1.8.3",
     "cli-color": "^1.2.0"
   }
 }
