--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "cli-color": "^1.2.0",
     "express": "^4.15.3",
-    "pg": "^6.2.4",
+    "pg": "^4.4.1",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.1.0",
     "sqlite": "^2.8.0",
-    "underscore": "^1.8.3",
-    "cli-color": "^1.2.0"
+    "underscore": "^1.8.3"
   }
 }
