--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "6.10.3",
+    "npm": "4.6.1"
+  },
   "scripts": {
     "start": "nodemon server.js"
   },
