--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "4.6.1"
   },
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
