--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
     "cli-color": "^1.2.0",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.15.3",
+    "jsonwebtoken": "^7.4.1",
     "pg": "^4.4.1",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.1.0",
